--- a/colorsExercise.css
+++ b/colorsExercise.css
@@ -1,21 +1,42 @@
 h1{
-    color: red
+    color: black;
+    background-color: red;
 }
 h2{
-    color: #ffa500
+    color: #000000;
+    background-color: #ffa500;
 }
 h3{
-    color: #ff0
+    color: #000;
+    background-color: #ff0;
 }
 h4{
-    color: #008000
+    color: #000000FF;
+    background-color: #008000;
 }
 h5{
-    color: #00f
+    color: #001;
+    background-color: #00f;
 }
 h6{
-    color: rgb(75, 0, 130)
+    color: rgb(0,0,0);
+    background-color: rgb(75, 0, 130);
 }
 p{
-    color: rgba(127, 0, 255, 1)
+    color: rgba(0,0,0,1);
+    background-color: rgba(127, 0, 255, 1);
+}
+
+#firstItem{
+    color: hotpink;
+}
+
+#lastItem{
+    background-color: peachpuff
+}
+
+.itemsB{
+    border: green;
+    border-style: solid;
+    border-radius: 5px;
 }
